--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,26 @@
   }
   body {
     font-family: "Archivo", serif;
-    
     color: white;
   }
-  
+
+
+@keyframes slideRight {
+  from {
+    opacity: 0;
+    transform: translateX(-40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    
+  }
+  to {
+    opacity: 1;
+  }
+}
