--- a/src/index.css
+++ b/src/index.css
@@ -10,26 +10,7 @@
   body {
     font-family: "Archivo", serif;
     color: white;
-    background-color: #353535;
+   background-color: #0a0a0a;
+
   }
 
-
-@keyframes slideRight {
-  from {
-    opacity: 0;
-    transform: translateX(-40px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    
-  }
-  to {
-    opacity: 1;
-  }
-}
